fixed menu being hidden by review banner

--- a/mitglied_web/src/app/custom-nav/custom-nav.component.scss
+++ b/mitglied_web/src/app/custom-nav/custom-nav.component.scss
@@ -67,6 +67,7 @@
 
 .sidenav {
   width: 400px;
+  padding-bottom: 33px;
 }
 
 .sidenav .mat-toolbar {
@@ -96,6 +97,7 @@
   margin-right: auto;
   text-align: center;
   margin-top: 2em;
+  margin-bottom: 70px;
 }
 
 .mat-nav-list .mat-list-item {
